--- a/app/src/main/res/layout/fragment_personage.xml
+++ b/app/src/main/res/layout/fragment_personage.xml
@@ -15,7 +15,7 @@
         android:background="@color/white"
         android:orientation="horizontal">
 
-        <com.zxr.medicalaid.widget.CircleImageView
+        <com.zhangqianyuan.teamwork.intelligenttcmpharmacy.widget.CircleImageView
             android:id="@+id/user_image"
             android:layout_width="@dimen/image_size_large"
             android:layout_height="@dimen/image_size_large"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white">
 
-        <com.zxr.medicalaid.widget.MaskableImageView
+        <com.zhangqianyuan.teamwork.intelligenttcmpharmacy.widget.MaskableImageView
             android:id="@+id/presribe_bt"
             android:layout_width="150dp"
             android:layout_height="0dp"
