--- a/app/src/main/res/layout/fragment_personage.xml
+++ b/app/src/main/res/layout/fragment_personage.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_300"
@@ -49,7 +48,8 @@
         android:layout_gravity="center"
         android:background="@drawable/generate_qb"
         android:layout_width="match_parent"
-        android:layout_height="130dp" />
+        android:layout_height="130dp"
+        android:contentDescription="TODO" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -67,7 +67,7 @@
             app:layout_constraintRight_toLeftOf="@+id/treat_record_bt"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.zxr.medicalaid.widget.MaskableImageView
+        <com.zhangqianyuan.teamwork.intelligenttcmpharmacy.widget.MaskableImageView
             android:id="@+id/caution_bt"
             android:layout_width="150dp"
             android:layout_height="0dp"
@@ -80,7 +80,7 @@
             app:layout_constraintRight_toLeftOf="@+id/about_us_bt"
             app:layout_constraintTop_toBottomOf="@+id/presribe_bt" />
 
-        <com.zxr.medicalaid.widget.MaskableImageView
+        <com.zhangqianyuan.teamwork.intelligenttcmpharmacy.widget.MaskableImageView
             android:id="@+id/about_us_bt"
             android:layout_width="150dp"
             android:layout_height="0dp"
@@ -93,7 +93,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/treat_record_bt" />
 
-        <com.zxr.medicalaid.widget.MaskableImageView
+        <com.zhangqianyuan.teamwork.intelligenttcmpharmacy.widget.MaskableImageView
             android:id="@+id/treat_record_bt"
             android:layout_width="150dp"
             android:layout_height="0dp"
