--- a/app/src/main/res/layout/fragment_select.xml
+++ b/app/src/main/res/layout/fragment_select.xml
@@ -36,7 +36,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_weight="1"
-                android:src="@drawable/prescribe_bt" />
+                android:src="@drawable/prescribe_bt_ic" />
 
             <ImageView
                 android:id="@+id/treat_bt"
