基础性工作_3_加了头像选择

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.zxr.medicalaid.mvp.ui.activities.AboutUsActivity">
+    tools:context="com.zhangqianyuan.teamwork.intelligenttcmpharmacy.view.activity.AboutUsActivity">
 
     <WebView
         android:id="@+id/about_us_web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></WebView>
+        android:layout_height="match_parent">
+    </WebView>
 
 </FrameLayout>
