--- a/app/src/main/res/layout/activity_userinfo_edit.xml
+++ b/app/src/main/res/layout/activity_userinfo_edit.xml
@@ -42,7 +42,8 @@
             android:layout_height="@dimen/image_size_tiny"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/more" />
+            android:src="@drawable/more"
+            android:contentDescription="TODO" />
 
         <com.zhangqianyuan.teamwork.intelligenttcmpharmacy.widget.CircleImageView
             android:id="@+id/circleImageView"
@@ -53,6 +54,44 @@
             android:src="@drawable/default_image" />
 
 
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/ID_relative"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/border_line"
+        android:padding="8dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_margin="8dp"
+            android:text="账户名"
+            android:textColor="@color/primary_text"
+            android:textSize="@dimen/font_large" />
+
+
+        <ImageView
+            android:id="@+id/go_on_8"
+            android:layout_width="@dimen/image_size_tiny"
+            android:layout_height="@dimen/image_size_tiny"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/more" />
+
+        <EditText
+            android:id="@+id/nick_ID"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/go_on_8"
+            android:hint="帐户名"
+            android:background="@null"
+            android:textColor="@color/secondary_text"
+            android:textSize="@dimen/font_normal" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -69,9 +108,10 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_margin="8dp"
-            android:text="@string/name"
+            android:text="昵称"
             android:textColor="@color/primary_text"
             android:textSize="@dimen/font_large" />
+
 
         <ImageView
             android:id="@+id/go_on_1"
@@ -93,40 +133,164 @@
             android:textSize="@dimen/font_normal" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/password_relative"
-        android:layout_width="match_parent"
+    <com.github.florent37.expansionpanel.ExpansionHeader
+        android:tooltipText="安全选项"
         android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:expansion_headerIndicator="@id/headerIndicator"
+        app:expansion_layout="@id/expansionLayout"
+        android:padding="15dp"
+        app:expansion_toggleOnClick="true">
 
-        android:background="@drawable/border_line"
-        android:padding="8dp">
-
+        <!-- HEADER -->
         <TextView
+            android:text="安全选项"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_margin="8dp"
-            android:text="@string/password"
-            android:textColor="@color/primary_text"
-            android:textSize="@dimen/font_large" />
-
+            android:layout_height="wrap_content" />
+        <!-- HEADER INDICATOR -->
         <ImageView
-            android:id="@+id/go_on_3"
-            android:layout_width="@dimen/image_size_tiny"
-            android:layout_height="@dimen/image_size_tiny"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/more" />
-
-        <TextView
-            android:layout_width="wrap_content"
+            android:adjustViewBounds="true"
+            android:id="@+id/headerIndicator"
+            android:layout_gravity="center_vertical|right"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/go_on_3"
-            android:text="修改"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/font_normal" />
-    </RelativeLayout>
+            android:layout_marginLeft="16dp"
+            android:layout_width="wrap_content"
+            app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />
+
+
+    </com.github.florent37.expansionpanel.ExpansionHeader>
+
+    <com.github.florent37.expansionpanel.ExpansionLayout
+        android:id="@+id/expansionLayout"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <com.github.florent37.expansionpanel.viewgroup.ExpansionsViewGroupLinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- CONTENT -->
+            <RelativeLayout
+                android:id="@+id/password_relative"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:background="@drawable/border_line"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="8dp"
+                    android:text="@string/password"
+                    android:textColor="@color/primary_text"
+                    android:textSize="@dimen/font_large" />
+
+                <ImageView
+                    android:id="@+id/go_on_3"
+                    android:layout_width="@dimen/image_size_tiny"
+                    android:layout_height="@dimen/image_size_tiny"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/more" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/go_on_3"
+                    android:text="修改"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/font_normal" />
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/phone_relative"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/border_line"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="8dp"
+                    android:text="手机号"
+                    android:textColor="@color/primary_text"
+                    android:textSize="@dimen/font_large" />
+
+
+                <ImageView
+                    android:id="@+id/go_on_6"
+                    android:layout_width="@dimen/image_size_tiny"
+                    android:layout_height="@dimen/image_size_tiny"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/more" />
+
+                <EditText
+                    android:id="@+id/nick_phonenumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/go_on_6"
+                    android:hint="手机号"
+                    android:background="@null"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/font_normal" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/email_relative"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/border_line"
+                android:padding="8dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="8dp"
+                    android:text="电子邮件"
+                    android:textColor="@color/primary_text"
+                    android:textSize="@dimen/font_large" />
+
+
+                <ImageView
+                    android:id="@+id/go_on_7"
+                    android:layout_width="@dimen/image_size_tiny"
+                    android:layout_height="@dimen/image_size_tiny"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/more" />
+
+                <EditText
+                    android:id="@+id/nick_email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toLeftOf="@id/go_on_7"
+                    android:hint="电子邮件"
+                    android:background="@null"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/font_normal" />
+            </RelativeLayout>
+
+        </com.github.florent37.expansionpanel.viewgroup.ExpansionsViewGroupLinearLayout>
+
+
+    </com.github.florent37.expansionpanel.ExpansionLayout>
+
 
 
     <RelativeLayout
