--- a/app/src/main/res/layout/activity_prescribe.xml
+++ b/app/src/main/res/layout/activity_prescribe.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_300"
-    android:orientation="vertical"
-    tools:context="com.zxr.medicalaid.mvp.ui.activities.PrescribeActivity">
+    android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
