--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,8 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/log_in_bg"
-    tools:context="com.zhangqianyuan.teamwork.intelligenttcmpharmacy.view.activity.RegisterActivity">
+    android:background="@drawable/log_in_bg">
 
 
     <android.support.constraint.Guideline
