--- a/app/src/main/res/layout/fragment_select.xml
+++ b/app/src/main/res/layout/fragment_select.xml
@@ -18,7 +18,8 @@
            android:id="@+id/banner"
            android:layout_weight="3"
            android:layout_width="match_parent"
-           android:layout_height="0dp"></com.youth.banner.Banner>
+           android:layout_height="0dp">
+       </com.youth.banner.Banner>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
