--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -144,7 +144,7 @@
             android:layout_weight="1"
             android:hint="@string/identifying_code" />
 
-        <TextView
+        <Button
             android:id="@+id/identifying_number_send"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -153,7 +153,7 @@
             android:background="@drawable/identify_text_bg"
             android:gravity="center"
             android:src="@mipmap/ic_launcher"
-            android:text="@string/send" />
+            android:text="获取验证码" />
     </LinearLayout>
 
     <LinearLayout
