--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,165 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:zhy="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF">
-  <LinearLayout
-      android:layout_marginVertical="10dp"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="#fff"
-      android:orientation="vertical">
+    android:background="#FFF"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.SearchView
-        app:iconifiedByDefault="false"
-        android:searchIcon="@drawable/search_icon_red"
-        android:id="@+id/et_searchMedical"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginHorizontal="14dp"
-        android:layout_weight="1"
-        android:background="@drawable/searchview_shape"
-        android:hint="搜索药材"
-        android:textColorHint="#B6BAB9"
-        android:textSize="14sp"/>
-    <ListView
-        android:id="@+id/lv"
-        android:layout_marginHorizontal="14dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="14dp"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="历史搜索"
-        android:textSize="20sp"
-        android:layout_marginBottom="10dp"/>
-    <com.zhy.view.flowlayout.TagFlowLayout
-        android:layout_marginHorizontal="14dp"
-        android:id="@+id/flowlayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </com.zhy.view.flowlayout.TagFlowLayout>
-  </LinearLayout>
+        android:layout_marginVertical="10dp"
+        android:background="#fff"
+        android:orientation="vertical">
 
-  <!--<ScrollView-->
-      <!--android:layout_width="match_parent"-->
-      <!--android:layout_height="wrap_content">-->
+        <android.support.v7.widget.SearchView
+            android:id="@+id/et_searchMedical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="14dp"
+            android:background="@drawable/searchview_shape"
+            android:hint="搜索药材"
+            android:searchIcon="@drawable/search_icon_red"
+            android:textColorHint="#B6BAB9"
+            android:textSize="14sp"
+            app:iconifiedByDefault="false"
+            app:showDividers="none"
+            app:submitBackground="@null" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="14dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="历史搜索"
+            android:textSize="20sp" />
+
+        <com.zhy.view.flowlayout.TagFlowLayout
+            android:id="@+id/flowlayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="14dp"
+            app:max_select="10"></com.zhy.view.flowlayout.TagFlowLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="14dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="搜索发现"
+            android:textSize="20sp" />
+
+        <com.zhy.view.flowlayout.TagFlowLayout
+            android:id="@+id/findflowlayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="14dp"
+            app:max_select="10"></com.zhy.view.flowlayout.TagFlowLayout>
+
+        <com.jude.easyrecyclerview.EasyRecyclerView
+            android:id="@+id/erv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="14dp" />
+    </LinearLayout>
+
+    <!--<ScrollView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
 
     <!--<LinearLayout-->
-        <!--android:id="@+id/search_result"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical">-->
+    <!--android:id="@+id/search_result"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:orientation="vertical">-->
 
-      <!--<LinearLayout-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:layout_margin="20dp"-->
-          <!--android:orientation="horizontal">-->
+    <!--<LinearLayout-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_margin="20dp"-->
+    <!--android:orientation="horizontal">-->
 
-        <!--<TextView-->
-            <!--android:id="@+id/medical_name"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:textSize="40dp" />-->
+    <!--<TextView-->
+    <!--android:id="@+id/medical_name"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:textSize="40dp" />-->
 
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="50dp"-->
-            <!--android:textSize="20dp" />-->
-      <!--</LinearLayout>-->
-      <!--<TextView-->
-          <!--android:id="@+id/introduction"-->
-          <!--style="@style/TextAppearance.AppCompat.Title"-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:paddingBottom="16dp"-->
-          <!--android:layout_marginLeft="20dp"-->
-          <!--android:layout_marginTop="20dp"-->
-          <!--android:text="简介" />-->
-      <!--<TextView-->
-          <!--android:id="@+id/introduction_content"-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:textSize="17dp"-->
-          <!--android:layout_marginRight="10dp"-->
-          <!--android:layout_marginLeft="10dp"/>-->
-
-      <!--<View-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="5dp"-->
-          <!--android:background="#E8EDF3" />-->
-
-      <!--<TextView-->
-          <!--android:id="@+id/growth_habit"-->
-          <!--style="@style/TextAppearance.AppCompat.Title"-->
-          <!--android:layout_width="100dp"-->
-          <!--android:layout_height="40dp"-->
-          <!--android:layout_marginLeft="20dp"-->
-          <!--android:layout_marginTop="20dp"-->
-          <!--android:text="生长环境" />-->
-
-
-      <!--<TextView-->
-          <!--android:id="@+id/growth_habit_content"-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:textSize="17dp"-->
-          <!--android:layout_marginRight="10dp"-->
-          <!--android:layout_marginLeft="10dp"/>-->
-
-      <!--<View-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="5dp"-->
-          <!--android:background="#E8EDF3" />-->
-
-      <!--<TextView-->
-          <!--android:id="@+id/medicinal_value"-->
-          <!--style="@style/TextAppearance.AppCompat.Title"-->
-          <!--android:layout_width="100dp"-->
-          <!--android:layout_height="40dp"-->
-          <!--android:layout_marginLeft="20dp"-->
-          <!--android:layout_marginTop="20dp"-->
-          <!--android:text="药用价值" />-->
-
-      <!--<TextView-->
-          <!--android:id="@+id/medicinal_value_content"-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:textSize="17dp"-->
-          <!--android:layout_marginRight="10dp"-->
-          <!--android:layout_marginLeft="10dp"/>-->
-
-      <!--<View-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="5dp"-->
-          <!--android:background="#E8EDF3" />-->
-
-      <!--<TextView-->
-          <!--android:id="@+id/character"-->
-          <!--style="@style/TextAppearance.AppCompat.Title"-->
-          <!--android:layout_width="100dp"-->
-          <!--android:layout_height="40dp"-->
-          <!--android:layout_marginLeft="20dp"-->
-          <!--android:layout_marginTop="20dp"-->
-          <!--android:text="特点" />-->
-
-
-      <!--<TextView-->
-          <!--android:id="@+id/character_content"-->
-          <!--android:layout_width="match_parent"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:textSize="17dp"-->
-          <!--android:layout_marginRight="10dp"-->
-          <!--android:layout_marginLeft="10dp"/>-->
+    <!--<TextView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:textSize="20dp" />-->
     <!--</LinearLayout>-->
-  <!--</ScrollView>-->
+    <!--<TextView-->
+    <!--android:id="@+id/introduction"-->
+    <!--style="@style/TextAppearance.AppCompat.Title"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:paddingBottom="16dp"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="简介" />-->
+    <!--<TextView-->
+    <!--android:id="@+id/introduction_content"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textSize="17dp"-->
+    <!--android:layout_marginRight="10dp"-->
+    <!--android:layout_marginLeft="10dp"/>-->
+
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="5dp"-->
+    <!--android:background="#E8EDF3" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/growth_habit"-->
+    <!--style="@style/TextAppearance.AppCompat.Title"-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="40dp"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="生长环境" />-->
+
+
+    <!--<TextView-->
+    <!--android:id="@+id/growth_habit_content"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textSize="17dp"-->
+    <!--android:layout_marginRight="10dp"-->
+    <!--android:layout_marginLeft="10dp"/>-->
+
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="5dp"-->
+    <!--android:background="#E8EDF3" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/medicinal_value"-->
+    <!--style="@style/TextAppearance.AppCompat.Title"-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="40dp"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="药用价值" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/medicinal_value_content"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textSize="17dp"-->
+    <!--android:layout_marginRight="10dp"-->
+    <!--android:layout_marginLeft="10dp"/>-->
+
+    <!--<View-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="5dp"-->
+    <!--android:background="#E8EDF3" />-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/character"-->
+    <!--style="@style/TextAppearance.AppCompat.Title"-->
+    <!--android:layout_width="100dp"-->
+    <!--android:layout_height="40dp"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:text="特点" />-->
+
+
+    <!--<TextView-->
+    <!--android:id="@+id/character_content"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:textSize="17dp"-->
+    <!--android:layout_marginRight="10dp"-->
+    <!--android:layout_marginLeft="10dp"/>-->
+    <!--</LinearLayout>-->
+    <!--</ScrollView>-->
 
 </LinearLayout>
