--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:zhy="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
@@ -29,6 +28,7 @@
             app:submitBackground="@null" />
 
         <TextView
+            android:id="@+id/historysearch_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="14dp"
@@ -46,124 +46,11 @@
 
 
         <com.jude.easyrecyclerview.EasyRecyclerView
+            android:layout_marginVertical="10dp"
             android:id="@+id/erv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="14dp" />
     </LinearLayout>
-
-    <!--<ScrollView-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content">-->
-
-    <!--<LinearLayout-->
-    <!--android:id="@+id/search_result"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:orientation="vertical">-->
-
-    <!--<LinearLayout-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_margin="20dp"-->
-    <!--android:orientation="horizontal">-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/medical_name"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:textSize="40dp" />-->
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:textSize="20dp" />-->
-    <!--</LinearLayout>-->
-    <!--<TextView-->
-    <!--android:id="@+id/introduction"-->
-    <!--style="@style/TextAppearance.AppCompat.Title"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:paddingBottom="16dp"-->
-    <!--android:layout_marginLeft="20dp"-->
-    <!--android:layout_marginTop="20dp"-->
-    <!--android:text="简介" />-->
-    <!--<TextView-->
-    <!--android:id="@+id/introduction_content"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textSize="17dp"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_marginLeft="10dp"/>-->
-
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="5dp"-->
-    <!--android:background="#E8EDF3" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/growth_habit"-->
-    <!--style="@style/TextAppearance.AppCompat.Title"-->
-    <!--android:layout_width="100dp"-->
-    <!--android:layout_height="40dp"-->
-    <!--android:layout_marginLeft="20dp"-->
-    <!--android:layout_marginTop="20dp"-->
-    <!--android:text="生长环境" />-->
-
-
-    <!--<TextView-->
-    <!--android:id="@+id/growth_habit_content"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textSize="17dp"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_marginLeft="10dp"/>-->
-
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="5dp"-->
-    <!--android:background="#E8EDF3" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/medicinal_value"-->
-    <!--style="@style/TextAppearance.AppCompat.Title"-->
-    <!--android:layout_width="100dp"-->
-    <!--android:layout_height="40dp"-->
-    <!--android:layout_marginLeft="20dp"-->
-    <!--android:layout_marginTop="20dp"-->
-    <!--android:text="药用价值" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/medicinal_value_content"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textSize="17dp"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_marginLeft="10dp"/>-->
-
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="5dp"-->
-    <!--android:background="#E8EDF3" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/character"-->
-    <!--style="@style/TextAppearance.AppCompat.Title"-->
-    <!--android:layout_width="100dp"-->
-    <!--android:layout_height="40dp"-->
-    <!--android:layout_marginLeft="20dp"-->
-    <!--android:layout_marginTop="20dp"-->
-    <!--android:text="特点" />-->
-
-
-    <!--<TextView-->
-    <!--android:id="@+id/character_content"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:textSize="17dp"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_marginLeft="10dp"/>-->
-    <!--</LinearLayout>-->
-    <!--</ScrollView>-->
 
 </LinearLayout>
