--- a/app/src/main/res/layout/drugdetail_layout.xml
+++ b/app/src/main/res/layout/drugdetail_layout.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical">
 
     <ScrollView
+        android:scrollbars="none"
+        android:scrollIndicators="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -17,20 +19,31 @@
             android:orientation="vertical">
 
 
-            <Button
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="10dp"
-                android:background="#00000000"
-                android:drawableStart="@drawable/ic_left_black"
-                android:text="返回" />
+                <!--<ImageView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:src="@drawable/ic_left_black"/>-->
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:id="@+id/back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:background="#00000000"
+                    android:drawableStart="@drawable/ic_left_black"
+                    android:text="返回" />
+
+
+
+
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
-                android:layout_marginVertical="10dp"
+                android:layout_marginVertical="5dp"
                 android:layout_marginStart="25dp"
                 android:orientation="horizontal">
 
