--- a/app/src/main/res/layout/activity_get_prescription_auto.xml
+++ b/app/src/main/res/layout/activity_get_prescription_auto.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,6 +15,7 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
     <android.support.v7.widget.SearchView
+        android:layout_below="@id/getprescritionauto_toolbar"
         android:id="@+id/getprescritionauto_searchview"
         android:searchIcon="@drawable/search_icon_red"
         app:queryHint="请输入病症"
@@ -25,11 +26,43 @@
         android:layout_height="wrap_content"
         app:iconifiedByDefault="false"
         />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/getprescritionauto_searchview"
+        android:layout_marginHorizontal="50dp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:id="@+id/getprescritionauto_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <View
+        android:id="@+id/line11"
+        android:layout_below="@id/getprescritionauto_price"
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"/>
+
     <com.jude.easyrecyclerview.EasyRecyclerView
-        android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="14dp"
+        android:layout_below="@id/line11"
+        app:layout_empty="@layout/easyrecycleview_empty"
+        android:layout_marginTop="5dp"
+        android:layout_marginHorizontal="10dp"
         android:id="@+id/getprescritionauto_easyrecycle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/getprescritionauto_float"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:elevation="5dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_ok"
+        />
 
-</LinearLayout>
+</RelativeLayout>
