--- a/app/src/main/res/layout/drugeandweight_item.xml
+++ b/app/src/main/res/layout/drugeandweight_item.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:background="@drawable/drugandweight_shape"
+    android:layout_marginTop="5dp"
+    >
 
     <!--输入药方的编号-->
     <TextView
@@ -9,7 +12,6 @@
         android:layout_height="40dp"
         android:textSize="25sp"
         android:gravity="center"
-        android:text="1."
         android:textColor="@color/black"
         android:layout_marginHorizontal="15dp"
         android:layout_centerVertical="true"
